update CSS and HTML Files

--- a/index_BMW.html
+++ b/index_BMW.html
@@ -1,12 +1,152 @@
 <!DOCTYPE html>
 <html lang="fr"/>
 <head>
+	<!-- Métadonnées -->
 	<meta charset="UTF-8"/>
-  <link rel="stylesheet" type="text/css" href="BMW.css"/>
-		<title>
-			Maquette BMW
-		</title>
+	<meta name="description" content="Réservez votre essai du nouveau crossover MCAR MC-1">
+	<meta name="keywords" content="MCAR, essai, réservation, crossover, voiture, elegance">
+	<meta name="author" content="Aurélie Victorin, Fabrice Chapier">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+	<!-- Liens vers Google fonts pour polices de caractères équivalentes -->
+	<link href="https://fonts.googleapis.com/css?family=Lato&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Playfair+Display&display=swap" rel="stylesheet">
+
+	<!-- Liens vers fichier CSS correspondant 'BMW' -->
+	<link rel="stylesheet" type="text/css" href="BMW.css"/>
+
+	<title>Crossover MCAR MC-I</title>
 </head>
-
-
+<header>
+	<div class="container">
+		<div><img src="Images/suv-1344716.png" alt="Crossover_BMW_MCAR_MC-I" class="imgResponsive"></div>
+		<div id="logoCentered"><img src="Images/LogoMCAR.png" alt="Logo_MCAR"></div>
+	  <div class="centered">
+		<h1>Affrontez tous les obstacles<br/>avec élégance</h1>
+		<h3>Nouveau MCAR MC-I crossover</h3>
+		</div>
+		<div id="VolantDdeEssai">
+			<a href="#reserve_Essai"><img src="Images/Volant_dde_essai.png" alt="symbole_Volant" class="imgResponsive"></a>
+		</div>
+	</div>
+</header>
+<body>
+	<!--visionnaire-->
+	<section>
+		<div class="box">
+      <div class="one">
+				<h4>Visionnaire sous tous les angles</h4>
+				<h6>Style futuriste</h6>
+				<p>La BMW i3 ne suit aucune tendance, elle est l'expression d'un style de vie assumé. Son langage stylistique futuriste lui confère également de la clarté à l'extérieur et une ambiance "lounge" à l'intérieur.</p>
+				<p>Aménagée sous le signe de la légèreté, elle se démarque par l'emploi de matériaux durables et par une foison de détails fonctionnels. Une voiture novatrice qui mise sur l'individualité.</p>
+			</div>
+      <div class="two">
+				<img src="Images/bmw-918408_1920.png" alt="BMW-I3_Front">
+			</div>
+    </div>
+	</section>
+	<!--Performances et données techniques-->
+	<section>
+		<div class="box">
+      <div class="one">
+				<img src="Images/bmw-918407_1920.png" alt="BMW-I3_Back">
+			</div>
+      <div class="two">
+				<div class="boxR">
+		      <div class="oneR">
+						<P>Puissance du système en kW (ch) (225xe)</p>
+					</div>
+					<div class="twoR">
+						<p>165 (224)</p>
+					</div>
+				</div>
+				<div class="boxR">
+		      <div class="oneR">
+						<P>Accélération de 0 à 100 km/h en s<br/>(225xe)</p>
+					</div>
+					<div class="twoR">
+						<p>6,7</p>
+					</div>
+				</div>
+				<div class="boxR">
+		      <div class="oneR">
+						<P>Consommation en cycle mixte en l/100<br/>km (225xe)</p>
+					</div>
+					<div class="twoR">
+						<p>2,7-2,3(3)</p>
+					</div>
+				</div>
+				<div class="boxR">
+		      <div class="oneR">
+						<P>Emissions de CO2 en cycle mixte en g/km<br/>(225xe)</p>
+					</div>
+					<div class="twoR">
+						<p>61-52(3)</p>
+					</div>
+				</div>
+			</div>
+    </div>
+	</section>
+	<!--Conçue pour l'émotion-->
+	<section>
+		<div class="box">
+      <div class="one">
+				<h4>Conçue pour l'émotion</h4>
+				<h6>Matériaux exclusifs</h6>
+				<p>Chaque détail impressionne : alors qu'à l'extérieur, ce sont des peintures exceptionnelles qui mettent en valeur l'allure de la nouvelle BMW Série 8 Coupé, à l'intérieur, ce sont des matériaux luxueux associés à des surpiqûres contrastées élégantes et des éléments décoratifs.</p>
+			</div>
+      <div class="two">
+				<div class="container4Pic">
+					<div class="box4Pict">
+						<div><img src="Images/speed-1249610.png" alt="Compteur_Vitesse"></div>
+						<div><img src="Images/brake-light-333979.png" alt="Brake_light"></div>
+		        <div><img src="Images/bmw-4161653.png" alt="Jante"></div>
+						<div><img src="Images/car-1281640_1920.png" alt="Tableau_de_bord"></div>
+		      </div>
+				</div>
+			</div>
+    </div>
+	</section>
+	<!--Réservation et formulaire-->
+	<section>
+		<div class="container">
+			<img src="Images/img-BMW-form0.png" alt="Crossover_BMW_formulaire">
+		  <div class="TopLeft">
+				<h2>Réservez votre essai gratuit</h2>
+				<h5>Nouveau MCAR MC-I crossover</h5>
+			</div>
+			<!-- formulaire mailchimp -->
+		</div>
+	</section>
+</body>
+<footer>
+	<div class="container">
+		<p class="footerTitre">Univers MCAR</p>
+		<div class="TopLeft">
+			<p class="footerDetail">MCAR Newsletter</p>
+			<p class="footerDetail">MCAR Group</p>
+			<p class="footerDetail">Certification ISO 9001</p>
+			<p class="footerDetail">FAQ</p>
+			<p class="footerDetail">Carrières</p>
+		</div>
+	</div>
+	<div class="container">
+		<p class="footerTitre">Conditions générales d'utilisation</p>
+		<div class="TopLeft">
+			<p class="footerDetail">Cookies</p>
+			<p class="footerDetail">Consommations et émissions</p>
+			<p class="footerDetail">Mentions légales</p>
+			<p class="footerDetail">Conditions générales d'achat</p>
+			<p class="footerDetail">Protection des données</p>
+		</div>
+	</div>
+	<div class="container">
+		<p class="footerTitre">Rejoignez-nous</p>
+		<div class="TopLeft">
+			<img src="Images/logo-instagram.png" alt="Instagram">
+			<img src="Images/logo-IN.png" alt="LinkedIn">
+			<img src="Images/logo-twitter.png" alt="Tweeter">
+		</div>
+	</div>
+</footer>
 </html>
